enhance title generation

--- a/markdown-lab/poemas/_ (10).md
+++ b/markdown-lab/poemas/_ (10).md
@@ -1,6 +1,6 @@
 ---
-slug: "/poemas/me-besan-dos-versiones-de-ti:"
-title: "me-besan-dos-versiones-de-ti:"
+slug: "/poemas/me-besan-dos-versiones-de-ti"
+title: "me-besan-dos-versiones-de-ti"
 ---
 Me besan dos versiones de ti:
 
