--- a/markdown-lab/poemas/_ (44).md
+++ b/markdown-lab/poemas/_ (44).md
@@ -1,6 +1,6 @@
 ---
-slug: "/poemas/extremidades-repartidas;"
-title: "extremidades-repartidas;"
+slug: "/poemas/extremidades-repartidas"
+title: "extremidades-repartidas"
 ---
 Extremidades repartidas;
 
