--- a/markdown-lab/poemas/_ (5).md
+++ b/markdown-lab/poemas/_ (5).md
@@ -1,6 +1,6 @@
 ---
-slug: "/poemas/quiero-y-pienso;"
-title: "quiero-y-pienso;"
+slug: "/poemas/quiero-y-pienso"
+title: "quiero-y-pienso"
 ---
 Quiero y pienso;
 
