--- a/markdown-lab/poemas/_ (31).md
+++ b/markdown-lab/poemas/_ (31).md
@@ -1,5 +1,5 @@
 ---
-slug: "/poemas/ustedes-diseñan-voluntades"
+slug: "/poemas/ustedes-disennan-voluntades"
 title: "ustedes-diseñan-voluntades"
 ---
 Ustedes diseñan voluntades,
