Poema: Celos de los ríos

--- a/markdown-lab/poemas/_ (54).md
+++ b/markdown-lab/poemas/_ (54).md
@@ -1,9 +1,15 @@
 ---
-slug: "/poemas/somos-chubascos"
-title: "somos-chubascos"
+slug: "/poemas/celos-de-los-rios"
+title: "celos-de-los-ríos"
 ---
-Somos chubascos,
+Celos de los ríos,
 
-chispas de nostalgia,
+de los lagos,
 
-y perfume en los charcos.
+del Atlántico.
+
+&nbsp;
+
+Soy un necio
+
+lloviendo charcos.
