--- a/markdown-lab/poemas/_ (54).md
+++ b/markdown-lab/poemas/_ (54).md
@@ -1,15 +1,11 @@
 ---
-slug: "/poemas/celos-de-los-rios"
-title: "celos-de-los-ríos"
+slug: "/poemas/un-teatro-de-aves"
+title: "un-teatro-de-aves"
 ---
-Celos de los ríos,
+Un teatro de aves
 
-de los lagos,
+y huracán arrasador,
 
-del Atlántico.
+tatúan en silencio
 
-&nbsp;
-
-Soy un necio
-
-lloviendo charcos.
+cánticos de reforma.
