--- a/markdown-lab/poemas/_ (55).md
+++ b/markdown-lab/poemas/_ (55).md
@@ -1,11 +1,25 @@
 ---
-slug: "/poemas/un-teatro-de-aves"
-title: "un-teatro-de-aves"
+slug: "/poemas/hijas-de-eva"
+title: "hijas-de-eva"
 ---
-Un teatro de aves
+Hijas de Eva
 
-y huracán arrasador,
+libres del amor propio,
 
-tatúan en silencio
+hundiéndose en el mar.
 
-cánticos de reforma.
+&nbsp;
+
+Hienas marinas acechan,
+
+ocultando su collar 
+
+de dientes de sirenas.
+
+&nbsp;
+
+Hienas satisfechas,
+
+se marchan
+
+a cepillar sus fauces.
