--- a/markdown-lab/poemas/_ (56).md
+++ b/markdown-lab/poemas/_ (56).md
@@ -1,25 +1,13 @@
 ---
-slug: "/poemas/hijas-de-eva"
-title: "hijas-de-eva"
+slug: "/poemas/la-tranquilidad"
+title: "la-tranquilidad"
 ---
-Hijas de Eva
+La tranquilidad
 
-libres del amor propio,
+es mi cabestro,
 
-hundiéndose en el mar.
+pero prometo
 
-&nbsp;
+ponerle ronzal 
 
-Hienas marinas acechan,
-
-ocultando su collar 
-
-de dientes de sirenas.
-
-&nbsp;
-
-Hienas satisfechas,
-
-se marchan
-
-a cepillar sus fauces.
+a mi silencio.
