--- a/markdown-lab/poemas/_ (58).md
+++ b/markdown-lab/poemas/_ (58).md
@@ -1,61 +1,49 @@
 ---
-slug: "/poemas/vengo-de-mi-institucion"
-title: "vengo-de-mi-institución"
+slug: "/poemas/sos-el-balso"
+title: "sos-el-balso"
 ---
-Vengo de mi institución,
+Sos el balso,
 
-donde el material
+que después
 
-de mi estandarte
+de salir del pozo
 
-no tiene tonos
+frunce el ceño
 
-de supremacía,
-
-donde nadie
-
-es mejor que nadie,
-
-donde todos
-
-empiezan como alguien,
-
-esconderse es un derecho,
-
-nombrarse es un delito,
-
-la vitalidad es una página
-
-en el capítulo de los mitos.
+luego de cada siesta.
 
 &nbsp;
 
-Mis acompañantes
+Eras Ochroma
 
-son un ajedrez mesoamericano,
+que subía lastimada
 
-son llaveros de sus deudas,
+por la negatividad
 
-porta-vinos, bisuteras,
+hacia la sombra
 
-escudos de joyería, secretarios,
-
-réplicas indígenas,
-
-partes del proletariado;
-
-no sangre azul
-
-no tez rosada,
-
-sino sangre roja,
-
-sino piel quemada.
+de la luz.
 
 &nbsp;
 
-Les llaman títeres,
+Serás el alto
 
-cuando realmente son
+y delgado árbol
 
-titiriteros.
+que se robustece
+
+al ser escalado
+
+por sus hermanos.
+
+&nbsp;
+
+Sos, eras y serás
+
+mi núcleo paciente
+
+de los secretos
+
+y su oquedad
+
+del fondo de mi mente.
