--- a/markdown-lab/poemas/_ (59).md
+++ b/markdown-lab/poemas/_ (59).md
@@ -1,49 +1,19 @@
 ---
-slug: "/poemas/sos-el-balso"
-title: "sos-el-balso"
+slug: "/poemas/existimos-alpinistas"
+title: "existimos-alpinistas"
 ---
-Sos el balso,
+Existimos alpinistas
 
-que después
+en una montaña de calcio,
 
-de salir del pozo
+subimos cargando luces
 
-frunce el ceño
+para luego caer despacio,
 
-luego de cada siesta.
+las luces bajan en picada
 
-&nbsp;
+y cuando se vuelven cencellada
 
-Eras Ochroma
+terminan cubriendo el calcio
 
-que subía lastimada
-
-por la negatividad
-
-hacia la sombra
-
-de la luz.
-
-&nbsp;
-
-Serás el alto
-
-y delgado árbol
-
-que se robustece
-
-al ser escalado
-
-por sus hermanos.
-
-&nbsp;
-
-Sos, eras y serás
-
-mi núcleo paciente
-
-de los secretos
-
-y su oquedad
-
-del fondo de mi mente.
+de nuestras cabezas enterradas.
