--- a/markdown-lab/poemas/_ (60).md
+++ b/markdown-lab/poemas/_ (60).md
@@ -1,19 +1,41 @@
 ---
-slug: "/poemas/existimos-alpinistas"
-title: "existimos-alpinistas"
+slug: "/poemas/abriste-el-regalo-de-bodas"
+title: "abriste-el-regalo-de-bodas"
 ---
-Existimos alpinistas
+Abriste el regalo de bodas,
 
-en una montaña de calcio,
+desatando detrimentos varios,
 
-subimos cargando luces
+venganza de Zeus ante el conforte.
 
-para luego caer despacio,
+&nbsp;
 
-las luces bajan en picada
+No vagaste por el mundo
 
-y cuando se vuelven cencellada
+buscando al mensajero
 
-terminan cubriendo el calcio
+dueño del elpis
 
-de nuestras cabezas enterradas.
+pronto a caducar.
+
+&nbsp;
+
+Y ahora no hay espacio,
+
+ciento veinte años inflándose
+
+con promesas
+
+de que algún día,
+
+te atreverías a caminar.
+
+&nbsp;
+
+Sin sensaciones y amor propio,
+
+y aunque detengas el tiempo,
+
+no habrán respuestas 
+
+sin reflexión.
