--- a/markdown-lab/poemas/_ (61).md
+++ b/markdown-lab/poemas/_ (61).md
@@ -1,41 +1,27 @@
 ---
-slug: "/poemas/abriste-el-regalo-de-bodas"
-title: "abriste-el-regalo-de-bodas"
+slug: "/poemas/hare-bien"
+title: "haré-bien"
 ---
-Abriste el regalo de bodas,
+Haré bien
 
-desatando detrimentos varios,
+si me levanto
 
-venganza de Zeus ante el conforte.
+y en la yugular
 
-&nbsp;
+te apuñalo un beso,
 
-No vagaste por el mundo
+si apuntándote en las sien,
 
-buscando al mensajero
+mezclo el sabor 
 
-dueño del elpis
+de mis labios
 
-pronto a caducar.
-
-&nbsp;
-
-Y ahora no hay espacio,
-
-ciento veinte años inflándose
-
-con promesas
-
-de que algún día,
-
-te atreverías a caminar.
+con tus pensamientos.
 
 &nbsp;
 
-Sin sensaciones y amor propio,
+El filo de la daga
 
-y aunque detengas el tiempo,
+de mi esperanza
 
-no habrán respuestas 
-
-sin reflexión.
+en tu pecho recuesto.
