--- a/markdown-lab/poemas/_ (62).md
+++ b/markdown-lab/poemas/_ (62).md
@@ -1,27 +1,19 @@
 ---
-slug: "/poemas/hare-bien"
-title: "haré-bien"
+slug: "/poemas/marte-y-venus"
+title: "marte-y-venus"
 ---
-Haré bien
+Marte y Venus
 
-si me levanto
+sí son lunas del Sol,
 
-y en la yugular
+con más parecidos 
 
-te apuñalo un beso,
+que diferencias,
 
-si apuntándote en las sien,
+uno es rojo 
 
-mezclo el sabor 
+y el otro cae en cuenta
 
-de mis labios
+que los colores 
 
-con tus pensamientos.
-
-&nbsp;
-
-El filo de la daga
-
-de mi esperanza
-
-en tu pecho recuesto.
+son apariencias.
