--- a/markdown-lab/poemas/_ (63).md
+++ b/markdown-lab/poemas/_ (63).md
@@ -1,19 +1,7 @@
 ---
-slug: "/poemas/marte-y-venus"
-title: "marte-y-venus"
+slug: "/poemas/me-nombraste-llamarada"
+title: "me-nombraste-llamarada"
 ---
-Marte y Venus
+Me nombraste llamarada,
 
-sí son lunas del Sol,
-
-con más parecidos 
-
-que diferencias,
-
-uno es rojo 
-
-y el otro cae en cuenta
-
-que los colores 
-
-son apariencias.
+aunque finjo un céfiro.
