--- a/markdown-lab/poemas/_ (64).md
+++ b/markdown-lab/poemas/_ (64).md
@@ -1,7 +1,27 @@
 ---
-slug: "/poemas/me-nombraste-llamarada"
-title: "me-nombraste-llamarada"
+slug: "/poemas/entre-calaveras"
+title: "entre-calaveras"
 ---
-Me nombraste llamarada,
+Entre calaveras,
 
-aunque finjo un céfiro.
+tu cara iluminada.
+
+&nbsp;
+
+Por resaltar tu brillo,
+
+te pintaste con ácido
+
+para lucir tu piel enrojecida.
+
+&nbsp;
+
+Nerviosa, manchaste
+
+tu rostro esmirriado.
+
+&nbsp;
+
+La nueva catrina,
+
+tropieza enceguecida.
