--- a/markdown-lab/poemas/_ (65).md
+++ b/markdown-lab/poemas/_ (65).md
@@ -1,27 +1,23 @@
 ---
-slug: "/poemas/entre-calaveras"
-title: "entre-calaveras"
+slug: "/poemas/somos-inocentes-pero-culpables"
+title: "somos-inocentes-pero-culpables"
 ---
-Entre calaveras,
+Somos inocentes pero culpables
 
-tu cara iluminada.
-
-&nbsp;
-
-Por resaltar tu brillo,
-
-te pintaste con ácido
-
-para lucir tu piel enrojecida.
+de la inocencia ante los tuertos.
 
 &nbsp;
 
-Nerviosa, manchaste
+Su labrys justicia será blandida
 
-tu rostro esmirriado.
+para dejarnos tuertos y a ellos ciegos,
+
+mientras les estrangula el peso
+
+de la sangre de sus heridas.
 
 &nbsp;
 
-La nueva catrina,
+Así, nosotros tomamos su labrys
 
-tropieza enceguecida.
+con la percepción disminuida.
