--- a/markdown-lab/poemas/_ (57).md
+++ b/markdown-lab/poemas/_ (57).md
@@ -1,13 +1,61 @@
 ---
-slug: "/poemas/la-tranquilidad"
-title: "la-tranquilidad"
+slug: "/poemas/vengo-de-mi-institucion"
+title: "vengo-de-mi-institución"
 ---
-La tranquilidad
+Vengo de mi institución,
 
-es mi cabestro,
+donde el material
 
-pero prometo
+de mi estandarte
 
-ponerle ronzal 
+no tiene tonos
 
-a mi silencio.
+de supremacía,
+
+donde nadie
+
+es mejor que nadie,
+
+donde todos
+
+empiezan como alguien,
+
+esconderse es un derecho,
+
+nombrarse es un delito,
+
+la vitalidad es una página
+
+en el capítulo de los mitos.
+
+&nbsp;
+
+Mis acompañantes
+
+son un ajedrez mesoamericano,
+
+son llaveros de sus deudas,
+
+porta-vinos, bisuteras,
+
+escudos de joyería, secretarios,
+
+réplicas indígenas,
+
+partes del proletariado;
+
+no sangre azul
+
+no tez rosada,
+
+sino sangre roja,
+
+sino piel quemada.
+
+&nbsp;
+
+Les llaman títeres,
+
+cuando realmente son
+
+titiriteros.
