filter de poemas

--- a/markdown-lab/poemas/_ (10).md
+++ b/markdown-lab/poemas/_ (10).md
@@ -1,13 +1,11 @@
 ---
-slug: "/poemas/me-besan-dos-versiones-de-ti"
-title: "me-besan-dos-versiones-de-ti"
+slug: "/poemas/hace-unos-annos"
+title: "hace-unos-años"
 ---
-Me besan dos versiones de ti:
+Hace unos años,
 
-una, con saliva,
+brazos me sostenían
 
-trazando su néctar,
+mientras lloraba el alma
 
-la otra, con ácido,
-
-creando ríos carmín.
+sin entender por qué.
