--- a/markdown-lab/poemas/_ (11).md
+++ b/markdown-lab/poemas/_ (11).md
@@ -1,13 +1,11 @@
 ---
-slug: "/poemas/tengo-que-ver-al-frente"
-title: "tengo-que-ver-al-frente"
+slug: "/poemas/sensacion-de-asfixia"
+title: "sensación-de-asfixia"
 ---
-Tengo que ver al frente,
+Sensación de asfixia
 
-pero las intenciones pivotan.
+que no se detiene,
 
-&nbsp;
+aún cuando mis manos
 
-A veces deseo no desearte,
-
-y otras, solo serte paz.
+acarician al cuello que lastiman.
