--- a/markdown-lab/poemas/_ (12).md
+++ b/markdown-lab/poemas/_ (12).md
@@ -1,31 +1,19 @@
 ---
-slug: "/poemas/ver-tus-lentes"
-title: "ver-tus-lentes"
+slug: "/poemas/si-trato-de-levitar"
+title: "si-trato-de-levitar"
 ---
-Ver tus lentes.
+Si trato de levitar
 
-&nbsp;
+un objeto hasta mis pies,
 
-Delgados puentes de aluminio,
+me desconcentro,
 
-redonda red de cristal,
+me desanimo
 
-tersa piel en la que se ha de posar
+y tomo con mis manos
 
-el frío reflejo 
+sentimientos de involucionado,
 
-de paneles de sal.
+que cree que la fuerza 
 
-&nbsp;
-
-En vaivén, a través 
-
-del arco de dorado floral
-
-sobre grandes cuencas,
-
-capturadoras negro abisal
-
-captan mi asomo 
-
-al ánima que avisto.
+está consigo.
