--- a/markdown-lab/poemas/_ (13).md
+++ b/markdown-lab/poemas/_ (13).md
@@ -1,49 +1,15 @@
 ---
-slug: "/poemas/se-me-hace-reconfortante-estar-contigo"
-title: "se-me-hace-reconfortante-estar-contigo"
+slug: "/poemas/un-hombre-sabio-de-verdad"
+title: "un-hombre-sabio-de-verdad"
 ---
-Se me hace reconfortante estar contigo,
+Un hombre sabio de verdad
 
-ver y besar desde el dorso de tus manos
+no rechaza la vida
 
-que te avisa en la psique los espasmos
+sino puede extasiarla;
 
-para luego sumergirme y pintar hipnotizado
+un delito el renunciar;
 
-hasta las fosas en los relieves de tu cuerpo.
+es de cobardes
 
-&nbsp;
-
-Me vuelves tan loco que estoy tranquilo,
-
-tus dedos sumergidos tocan los míos,
-
-invitándolos a adentrarse.
-
-&nbsp;
-
-Solo te aviso,
-
-mi locura contigo es plural,
-
-si seguimos, 
-
-nuestra insania se elevará
-
-a la equivalencia 
-
-de nuestro parecido.
-
-&nbsp;
-
-Mientras captas mi asomo 
-
-al ánima que averiguo,
-
-siempre descubres el mecanismo
-
-que no puedo más que revelar.
-
-&nbsp;
-
-Sinceramente, somos dioses que se miran.
+cederle el paso a los indignos.
