--- a/markdown-lab/poemas/_ (14).md
+++ b/markdown-lab/poemas/_ (14).md
@@ -1,15 +1,21 @@
 ---
-slug: "/poemas/marea-lejos-de-mis-amigos"
-title: "marea-lejos-de-mis-amigos"
+slug: "/poemas/somos-lo-que-hacemos"
+title: "somos-lo-que-hacemos"
 ---
-Marea lejos de mis amigos,
-
-no entiendo
-
-las conversaciones casuales.
+Somos lo que hacemos, repetidamente.
 
 &nbsp;
 
-Soy un océano con marea,
+Somos lo que hacemos, repetidamente.
 
-que sostiene su sal.
+&nbsp;
+
+Somos lo que hacemos, repetidamente.
+
+&nbsp;
+
+Somos lo que hacemos, repetidamente.
+
+&nbsp;
+
+Somos lo que hacemos, repetidamente.
