--- a/markdown-lab/poemas/_ (15).md
+++ b/markdown-lab/poemas/_ (15).md
@@ -1,11 +1,37 @@
 ---
-slug: "/poemas/entre-personas-azules-y-rojas"
-title: "entre-personas-azules-y-rojas"
+slug: "/poemas/no-necesito-entusiasmo"
+title: "no-necesito-entusiasmo"
 ---
-Entre personas azules y rojas,
+No necesito entusiasmo,
 
-me siento morada,
+sino, voluntad,
 
-pero también,
+para levantarme airoso
 
-me siento en casa.
+en este páramo de intentos.
+
+&nbsp;
+
+Hay un aguacero
+
+con sabor a hierro
+
+y los timbales
+
+se hacen escuchar,
+
+al tempo de los truenos.
+
+&nbsp;
+
+Ya en la cima
+
+doy un paso;
+
+redobles de silencio.
+
+&nbsp;
+
+Sin suelo,
+
+retumbo progreso.
