--- a/markdown-lab/poemas/_ (16).md
+++ b/markdown-lab/poemas/_ (16).md
@@ -1,7 +1,13 @@
 ---
-slug: "/poemas/hay-arcoiris"
-title: "hay-arcoíris"
+slug: "/poemas/no-brillan"
+title: "no-brillan"
 ---
-Hay arcoíris 
+No brillan,
 
-y acromatopsia.
+no por muerto,
+
+sino porque 
+
+la luz no escapa
+
+de los ojos negros.
