--- a/markdown-lab/poemas/_ (17).md
+++ b/markdown-lab/poemas/_ (17).md
@@ -1,23 +1,19 @@
 ---
-slug: "/poemas/hace-unos-annos"
-title: "hace-unos-años"
+slug: "/poemas/marina"
+title: "marina"
 ---
-Hace unos años,
+Marina, Marina,
 
-brazos me sostenían
+en voz alta me relajo.
 
-mientras lloraba el alma
+ 
 
-sin entender por qué.
-
-&nbsp;
-
-Creo que por acostumbrarme,
-
-a no llorar.
+Marina ¡vesánica!
 
 &nbsp;
 
-Con razón le dijeron a Vincent
+Discute contra sí misma;
 
-que este mundo no era para él.
+es gentil conmigo,
+
+y padece falta de cinismo.
