--- a/markdown-lab/poemas/_ (18).md
+++ b/markdown-lab/poemas/_ (18).md
@@ -1,11 +1,17 @@
 ---
-slug: "/poemas/sensacion-de-asfixia"
-title: "sensación-de-asfixia"
+slug: "/poemas/en-esta-gota"
+title: "en-esta-gota"
 ---
-Sensación de asfixia
+En esta gota,
 
-que no se detiene,
+no estoy a gusto
 
-aún cuando mis manos
+ignorando el océano.
 
-acarician al cuello que lastiman.
+ 
+
+No deseo éxito.
+
+&nbsp;
+
+Ansío exploración.
