--- a/markdown-lab/poemas/_ (19).md
+++ b/markdown-lab/poemas/_ (19).md
@@ -1,21 +1,17 @@
 ---
-slug: "/poemas/cada-vez-que-prendes-un-incendio"
-title: "cada-vez-que-prendes-un-incendio"
+slug: "/poemas/no-quiero-propiedades"
+title: "no-quiero-propiedades"
 ---
-Cada vez que prendes un incendio.
+No quiero propiedades.
 
-&nbsp;
+Mi voluntad se parte.
 
-El demonio se esconde sutil,
+ 
 
-en un anzuelo.
+Quiero adueñarme
 
-&nbsp;
+de mis despedidas.
 
-Los inocentes,
+ 
 
-desde el ático,
-
-por las manos de un maniático,
-
-colapsan sus costillas.
+Quiero partirme y vivir.
