--- a/markdown-lab/poemas/_ (2).md
+++ b/markdown-lab/poemas/_ (2).md
@@ -1,19 +1,11 @@
 ---
-slug: "/poemas/me-calmo"
-title: "me-calmo"
+slug: "/poemas/ven-a-un-humano-embotellado"
+title: "ven-a-un-humano-embotellado"
 ---
-Me calmo, sin que noten los relámpagos.
+Ven a un humano embotellado
 
-&nbsp;
+que se apena de su fragilidad,
 
-Sonrío, sin que noten mi felicidad;
+pero, no se rompe porque
 
-resisto, sin que noten mi durabilidad.
-
-&nbsp;
-
-Noten, que mis acciones
-
-no responden a mis emociones,
-
-sino, a mi voluntad.
+¿cómo se rompe el vacío?
