--- a/markdown-lab/poemas/_ (20).md
+++ b/markdown-lab/poemas/_ (20).md
@@ -1,15 +1,27 @@
 ---
-slug: "/poemas/cuando-fijo"
-title: "cuando-fijo"
+slug: "/poemas/ustedes-disennan-voluntades"
+title: "ustedes-diseñan-voluntades"
 ---
-Cuando fijo,
+Ustedes diseñan voluntades,
 
-me ahogaba en una pantalla,
+buscando excitación.
 
-distracciones del tamaño 
+ 
 
-de una cama,
+Lágrimas de rabia,
 
-fingiendo no escuchar
+engoman mis dientes.
 
-mis propios gritos.
+ 
+
+¿Quieren que exprima
+
+mis sentimientos en un cáliz?
+
+&nbsp;
+
+Beban riadas.
+
+ 
+
+Aquí vienen.
