--- a/markdown-lab/poemas/_ (21).md
+++ b/markdown-lab/poemas/_ (21).md
@@ -1,7 +1,11 @@
 ---
-slug: "/poemas/tu-presencia-me-recuerda"
-title: "tu-presencia-me-recuerda"
+slug: "/poemas/tan-repleto-de-palabras"
+title: "tan-repleto-de-palabras"
 ---
-Tu presencia me recuerda
+Tan repleto de palabras,
 
-relajarme conmigo.
+tan plenario y callado.
+
+ 
+
+Ambiciono preguntar.
