--- a/markdown-lab/poemas/_ (23).md
+++ b/markdown-lab/poemas/_ (23).md
@@ -1,15 +1,15 @@
 ---
-slug: "/poemas/un-hombre-sabio-de-verdad"
-title: "un-hombre-sabio-de-verdad"
+slug: "/poemas/lucho-por-izar"
+title: "lucho-por-izar"
 ---
-Un hombre sabio de verdad
+Lucho por izar 
 
-no rechaza la vida
+lo mejor de mí,
 
-si no puede extasiarla;
+no por darte 
 
-un delito el renunciar;
+a quien te merecés,
 
-es de cobardes
+pues no hay quien 
 
-cederle el paso a los indignos.
+valga de presente.
