--- a/markdown-lab/poemas/_ (24).md
+++ b/markdown-lab/poemas/_ (24).md
@@ -1,13 +1,11 @@
 ---
-slug: "/poemas/somos-lo-que-hacemos"
-title: "somos-lo-que-hacemos"
+slug: "/poemas/les-toca-o-aceptar-su-blancuzco"
+title: "les-toca-o-aceptar-su-blancuzco"
 ---
-Somos lo que hacemos, repetidamente.
+Les toca o aceptar su blancuzco,
 
-Somos lo que hacemos, repetidamente.
+o pintar su cuerpo, o pedir exilio
 
-Somos lo que hacemos, repetidamente.
+para que coloridas de juventud eterna,
 
-Somos lo que hacemos, repetidamente.
-
-Somos lo que hacemos, repetidamente.
+floten hasta el basurero.
