--- a/markdown-lab/poemas/_ (25).md
+++ b/markdown-lab/poemas/_ (25).md
@@ -1,37 +1,17 @@
 ---
-slug: "/poemas/no-necesito-entusiasmo"
-title: "no-necesito-entusiasmo"
+slug: "/poemas/gigante-al-tramo"
+title: "gigante-al-tramo"
 ---
-No necesito entusiasmo,
+Gigante al tramo
 
-sino, voluntad,
+de un curso fluvial,
 
-para levantarme airoso
+abetos gritando,
 
-en este páramo de intentos.
+madereros genocidas
 
-&nbsp;
+que transmutan
 
-Hay un aguacero
+al gigante al tramo
 
-con sabor a hierro
-
-y los timbales
-
-se hacen escuchar,
-
-al tempo de los truenos.
-
-&nbsp;
-
-Ya en la cima
-
-doy un paso;
-
-redobles de silencio.
-
-&nbsp;
-
-Sin suelo,
-
-retumbo progreso.
+en un curso de papel.
