--- a/markdown-lab/poemas/_ (26).md
+++ b/markdown-lab/poemas/_ (26).md
@@ -1,13 +1,11 @@
 ---
-slug: "/poemas/no-brillan"
-title: "no-brillan"
+slug: "/poemas/que-este-lago-se-rebalse"
+title: "que-este-lago-se-rebalse"
 ---
-No brillan,
+Que este lago se rebalse
 
-no por muerto,
+y reparta mi estamina dulce,
 
-sino porque 
+a quienes la vitalidad
 
-la luz no escapa
-
-de los ojos negros.
+les frunce el ceño.
