--- a/markdown-lab/poemas/_ (27).md
+++ b/markdown-lab/poemas/_ (27).md
@@ -1,19 +1,25 @@
 ---
-slug: "/poemas/marina"
-title: "marina"
+slug: "/poemas/a-veces-la-sirven-cruda"
+title: "a-veces-la-sirven-cruda"
 ---
-Marina, Marina,
+A veces la sirven cruda,
 
-en voz alta me relajo.
+otras, cocinada,
 
-&nbsp;
-
-Marina ¡vesánica!
+pero siempre a escondidas.
 
 &nbsp;
 
-Discute contra sí misma;
+Hay para dar y regalar,
 
-es gentil conmigo,
+todos podrían comer,
 
-y padece falta de cinismo.
+pero solo come
+
+la suerte o el olfato.
+
+&nbsp;
+
+En la tele,
+
+veo perros gordos.
