--- a/markdown-lab/poemas/_ (28).md
+++ b/markdown-lab/poemas/_ (28).md
@@ -1,17 +1,9 @@
 ---
-slug: "/poemas/en-esta-gota"
-title: "en-esta-gota"
+slug: "/poemas/no-colonizan-los-genios"
+title: "no-colonizan-los-genios"
 ---
-En esta gota,
+No colonizan los genios,
 
-no estoy a gusto
+sino zafios diversos
 
-ignorando el océano.
-
-&nbsp;
-
-No deseo éxito.
-
-&nbsp;
-
-Ansío exploración.
+que llamean avaricia.
