--- a/markdown-lab/poemas/_ (29).md
+++ b/markdown-lab/poemas/_ (29).md
@@ -1,17 +1,13 @@
 ---
-slug: "/poemas/no-quiero-propiedades"
-title: "no-quiero-propiedades"
+slug: "/poemas/con-simulacros"
+title: "con-simulacros"
 ---
-No quiero propiedades.
+Con simulacros
 
-Mi voluntad se parte.
+previos a la adultez,
 
-&nbsp;
+nos cuentan con rimas,
 
-Quiero adueñarme
+que si lo comparten,
 
-de mis despedidas.
-
-&nbsp;
-
-Quiero partirme y vivir.
+el esoterismo es ley.
