--- a/markdown-lab/poemas/_ (3).md
+++ b/markdown-lab/poemas/_ (3).md
@@ -1,13 +1,9 @@
 ---
-slug: "/poemas/lloro-al-bostezar"
-title: "lloro-al-bostezar"
+slug: "/poemas/aunque-en-calma"
+title: "aunque-en-calma"
 ---
-Lloro al bostezar
+Aunque en calma,
 
-y río a los ataques.
+no me quito los guantes
 
-&nbsp;
-
-Me salo con el frío
-
-y los escalofríos saben dulce.
+para quererte al aire.
