--- a/markdown-lab/poemas/_ (30).md
+++ b/markdown-lab/poemas/_ (30).md
@@ -1,7 +1,25 @@
 ---
-slug: "/poemas/se-que-alucino-perspectivas"
-title: "sé-que-alucino-perspectivas"
+slug: "/poemas/controla-el-aire"
+title: "controla-el-aire"
 ---
-Sé que alucino perspectivas
+Controla el aire 
 
-y hablo en son de pensamientos.
+de tu mente.
+
+&nbsp;
+
+Si se contamina 
+
+de incendiarias
+
+voces externas, 
+
+puede filtrarse
+
+más allá de tus
+
+cuerdas vocales
+
+y ser inhalado 
+
+por cándidas.
