--- a/markdown-lab/poemas/_ (31).md
+++ b/markdown-lab/poemas/_ (31).md
@@ -1,27 +1,23 @@
 ---
-slug: "/poemas/ustedes-disennan-voluntades"
-title: "ustedes-diseñan-voluntades"
+slug: "/poemas/extremidades-repartidas"
+title: "extremidades-repartidas"
 ---
-Ustedes diseñan voluntades,
+Extremidades repartidas;
 
-buscando excitación.
+aterrado por dormir;
 
-&nbsp;
+acechado por la ilogicidad;
 
-Lágrimas de rabia,
+tambaleaba sobre la puerta,
 
-engoman mis dientes.
+clamando por ayuda,
 
-&nbsp;
+hasta que la escotilla
 
-¿Quieren que exprima
+de mis consangres 
 
-mis sentimientos en un cáliz?
+me habría un retiro, 
 
-&nbsp;
+en medio de sus intentos 
 
-Beban riadas.
-
-&nbsp;
-
-Aquí vienen.
+de empatía.
