--- a/markdown-lab/poemas/_ (34).md
+++ b/markdown-lab/poemas/_ (34).md
@@ -1,19 +1,35 @@
 ---
-slug: "/poemas/vayan-a-vivir"
-title: "vayan-a-vivir"
+slug: "/poemas/volar"
+title: "volar"
 ---
-Vayan a vivir.
+Volar, implica rezagar la superficie.
 
 &nbsp;
 
-Existir está en aparecer
+Aquel que sube
 
-entre el espacio.
+se despide de su asiento.
 
 &nbsp;
 
-Somos libres
+El que se lanza a morir,
 
-para buscar
+es dueño del solado
 
-nuestro propósito.
+que aborrece.
+
+&nbsp;
+
+Pero se tiene la fuerza,
+
+sin sueño, fiereza de tanto
+
+amar los propios sueños
+
+que se emprende el vuelo;
+
+el gestor de los deseos;
+
+satisfacer al suelo
+
+o a lo desconocido.
