--- a/markdown-lab/poemas/_ (35).md
+++ b/markdown-lab/poemas/_ (35).md
@@ -1,23 +1,9 @@
 ---
-slug: "/poemas/lucho-por-izar"
-title: "lucho-por-izar"
+slug: "/poemas/amistades-opacas"
+title: "amistades-opacas"
 ---
-Lucho por izar 
+Amistades opacas
 
-lo mejor de mí,
+sentadas entre mentiras,
 
-no por darte 
-
-a quien te merecés,
-
-pues no hay quien 
-
-valga de presente.
-
-&nbsp;
-
-También caminás 
-
-por merecerte,
-
-mi Gaia protectora.
+no brillan escarcha.
