--- a/markdown-lab/poemas/_ (36).md
+++ b/markdown-lab/poemas/_ (36).md
@@ -1,11 +1,9 @@
 ---
-slug: "/poemas/les-toca-o-aceptar-su-blancuzco"
-title: "les-toca-o-aceptar-su-blancuzco"
+slug: "/poemas/manualmente"
+title: "manualmente"
 ---
-Les toca o aceptar su blancuzco,
+Manualmente,
 
-o pintar su cuerpo, o pedir exilio
+guardo tus memorias
 
-para que coloridas de juventud eterna,
-
-floten hasta el basurero.
+entre mi hipocampo.
