--- a/markdown-lab/poemas/_ (37).md
+++ b/markdown-lab/poemas/_ (37).md
@@ -1,17 +1,35 @@
 ---
-slug: "/poemas/gigante-al-tramo"
-title: "gigante-al-tramo"
+slug: "/poemas/el-maestro-es-sabio"
+title: "el-maestro-es-sabio"
 ---
-Gigante al tramo
+El maestro es sabio,
 
-de un curso fluvial,
+pero un chubasco,
 
-abetos gritando,
+fuerte, bendito y donador.
 
-madereros genocidas
+&nbsp;
 
-que transmutan
+Todo un conejo en llanura
 
-al gigante al tramo
+con resistencia de tortuga.
 
-en un curso de papel.
+&nbsp;
+
+Por eso, esta imagen idílica
+
+insta mi cuerpo a responder,
+
+entrenar mis articulaciones
+
+hasta convertirlas
+
+en quebradizas ramas secas,
+
+luz de parto al faro,
+
+de una mente despierta
+
+que de toda noche atento,
+
+se apaga al amanecer.
