--- a/markdown-lab/poemas/_ (38).md
+++ b/markdown-lab/poemas/_ (38).md
@@ -1,11 +1,15 @@
 ---
-slug: "/poemas/que-este-lago-se-rebalse"
-title: "que-este-lago-se-rebalse"
+slug: "/poemas/y-por-que-no-camina?"
+title: "¿y-por-qué-no-camina?"
 ---
-Que este lago se rebalse
+¿Y por qué no camina?
 
-y reparta mi estamina dulce,
+&nbsp;
 
-a quienes la vitalidad
+Porque es taquígrafo y ladrón,
 
-les frunce el ceño.
+máquina analítica con piernas,
+
+finge fallecer en el asiento
+
+para robar ideas del rededor.
