--- a/markdown-lab/poemas/_ (4).md
+++ b/markdown-lab/poemas/_ (4).md
@@ -1,11 +1,17 @@
 ---
-slug: "/poemas/ven-a-un-humano-embotellado"
-title: "ven-a-un-humano-embotellado"
+slug: "/poemas/trato-de-concentrarme"
+title: "trato-de-concentrarme"
 ---
-Ven a un humano embotellado
+Trato de concentrarme,
 
-que se apena de su fragilidad,
+en serio, pero tu espalda
 
-pero, no se rompe porque
+se filtra en mi memoria,
 
-¿cómo se rompe el vacío?
+qué irrisorio recuerdo.
+
+&nbsp;
+
+Acariciándote en las fronteras
+
+y en la suma de nuestro morbo.
