--- a/markdown-lab/poemas/_ (40).md
+++ b/markdown-lab/poemas/_ (40).md
@@ -1,9 +1,25 @@
 ---
-slug: "/poemas/no-colonizan-los-genios"
-title: "no-colonizan-los-genios"
+slug: "/poemas/hijas-de-eva"
+title: "hijas-de-eva"
 ---
-No colonizan los genios,
+Hijas de Eva
 
-sino zafios diversos
+libres del amor propio,
 
-que llamean avaricia.
+hundiéndose en el mar.
+
+&nbsp;
+
+Hienas marinas acechan,
+
+ocultando su collar 
+
+de dientes de sirenas.
+
+&nbsp;
+
+Hienas satisfechas,
+
+se marchan
+
+a cepillar sus fauces.
