--- a/markdown-lab/poemas/_ (41).md
+++ b/markdown-lab/poemas/_ (41).md
@@ -1,11 +1,13 @@
 ---
-slug: "/poemas/abono-organico-por-la-boca"
-title: "abono-orgánico-por-la-boca"
+slug: "/poemas/la-tranquilidad"
+title: "la-tranquilidad"
 ---
-Abono orgánico por la boca,
+La tranquilidad
 
-con opiniones perecederas,
+es mi cabestro,
 
-alimentan a la plaga 
+pero prometo
 
-de los parches.
+ponerle ronzal 
+
+a mi silencio.
