--- a/markdown-lab/poemas/_ (42).md
+++ b/markdown-lab/poemas/_ (42).md
@@ -1,17 +1,61 @@
 ---
-slug: "/poemas/con-simulacros"
-title: "con-simulacros"
+slug: "/poemas/vengo-de-mi-institucion"
+title: "vengo-de-mi-institución"
 ---
-Con simulacros
+Vengo de mi institución,
 
-previos a la adultez,
+donde el material
 
-nos cuentan con rimas,
+de mi estandarte
 
-que si lo comparten,
+no tiene tonos
 
-el esoterismo es ley,
+de supremacía,
 
-aunque lo divulga 
+donde nadie
 
-una mínima.
+es mejor que nadie,
+
+donde todos
+
+empiezan como alguien,
+
+esconderse es un derecho,
+
+nombrarse es un delito,
+
+la vitalidad es una página
+
+en el capítulo de los mitos.
+
+&nbsp;
+
+Mis acompañantes
+
+son un ajedrez mesoamericano,
+
+son llaveros de sus deudas,
+
+porta-vinos, bisuteras,
+
+escudos de joyería, secretarios,
+
+réplicas indígenas,
+
+partes del proletariado;
+
+no sangre azul
+
+no tez rosada,
+
+sino sangre roja,
+
+sino piel quemada.
+
+&nbsp;
+
+Les llaman títeres,
+
+cuando realmente son
+
+titiriteros.
