--- a/markdown-lab/poemas/_ (43).md
+++ b/markdown-lab/poemas/_ (43).md
@@ -1,19 +1,49 @@
 ---
-slug: "/poemas/controla-el-aire"
-title: "controla-el-aire"
+slug: "/poemas/sos-el-balso"
+title: "sos-el-balso"
 ---
-Controla el aire 
+Sos el balso,
 
-de tu mente.
+que después
+
+de salir del pozo
+
+frunce el ceño
+
+luego de cada siesta.
 
 &nbsp;
 
-Si se contamina 
+Eras Ochroma
 
-de incendiarias
+que subía lastimada
 
-voces externas, 
+por la negatividad
 
-puede ser inhalado 
+hacia la sombra
 
-por multitudes cándidas.
+de la luz.
+
+&nbsp;
+
+Serás el alto
+
+y delgado árbol
+
+que se robustece
+
+al ser escalado
+
+por sus hermanos.
+
+&nbsp;
+
+Sos, eras y serás
+
+mi núcleo paciente
+
+de los secretos
+
+y su oquedad
+
+del fondo de mi mente.
