--- a/markdown-lab/poemas/_ (44).md
+++ b/markdown-lab/poemas/_ (44).md
@@ -1,23 +1,19 @@
 ---
-slug: "/poemas/extremidades-repartidas"
-title: "extremidades-repartidas"
+slug: "/poemas/existimos-alpinistas"
+title: "existimos-alpinistas"
 ---
-Extremidades repartidas;
+Existimos alpinistas
 
-aterrado por dormir;
+en una montaña de calcio,
 
-acechado por la ilogicidad;
+subimos cargando luces
 
-tambaleaba sobre la puerta,
+para luego caer despacio,
 
-clamando por ayuda,
+las luces bajan en picada
 
-hasta que la escotilla
+y cuando se vuelven cencellada
 
-de mis consangres 
+terminan cubriendo el calcio
 
-me habría un retiro, 
-
-en medio de sus intentos 
-
-de empatía.
+de nuestras cabezas enterradas.
