--- a/markdown-lab/poemas/_ (45).md
+++ b/markdown-lab/poemas/_ (45).md
@@ -1,73 +1,41 @@
 ---
-slug: "/poemas/consuelo-visito-al-muchacho"
-title: "consuelo-visitó-al-muchacho"
+slug: "/poemas/abriste-el-regalo-de-bodas"
+title: "abriste-el-regalo-de-bodas"
 ---
-Consuelo visitó al muchacho
+Abriste el regalo de bodas,
 
-llevándolo hacia mundos paralelos.
+desatando detrimentos varios,
 
-&nbsp;
-
-Su voz y presencia
-
-desatan la dualidad de condición,
-
-estar en completo silencio,
-
-entre una atronadora guerra.
+venganza de Zeus ante el conforte.
 
 &nbsp;
 
-Con la promesa implícita pendiente,
+No vagaste por el mundo
 
-del que se llegaría a acabar
+buscando al mensajero
 
-o su sufrir o su vitalidad,
+dueño del elpis
 
-el niño estirándose a la fuerza
-
-tomó los filos negros
-
-que perforaban 
-
-los poros de su espalda,
-
-con su hermana atestiguando,
-
-hizo que le atravesaran hasta el alma
-
-y danzaran por su casa,
-
-abriendo sus ventanas
-
-hasta que el huracán pasara.
+pronto a caducar.
 
 &nbsp;
 
-Su tranquilidad se legitimó
+Y ahora no hay espacio,
 
-frente a la mayor prueba
+ciento veinte años inflándose
 
-que instaba el lanzarse al agua
+con promesas
 
-y respirar profundo,
+de que algún día,
 
-un loco seguro y sin tratamiento, 
-
-regresó de la sesión
-
-de su loquero interno.
+te atreverías a caminar.
 
 &nbsp;
 
-Un horno en el cuerpo
+Sin sensaciones y amor propio,
 
-se expande y se ve al espejo,
+y aunque detengas el tiempo,
 
-y asombrado por sobrevivir,
+no habrá respuestas
 
-se tira un beso y dice:
-
-"Gracias, sos mi orgullo,
-
-te amo y te disfruto".
+sin reflexión.
