--- a/markdown-lab/poemas/_ (46).md
+++ b/markdown-lab/poemas/_ (46).md
@@ -1,19 +1,27 @@
 ---
-slug: "/poemas/fallezca-el-empireo"
-title: "fallezca-el-empíreo"
+slug: "/poemas/hare-bien"
+title: "haré-bien"
 ---
-Fallezca el empíreo
+Haré bien
 
-o nazca el horizonte,
+si me levanto
 
-de igual manera,
+y en la yugular
 
-veo una lanza brillante,
+te apuñalo un beso,
 
-una antorcha impetuosa,
+si apuntándote en las sien,
 
-un ave encendida.
+mezclo el sabor 
+
+de mis labios
+
+con tus pensamientos.
 
 &nbsp;
 
-Tu libre albedrío.
+El filo de la daga
+
+de mi esperanza
+
+en tu pecho recuesto.
