--- a/markdown-lab/poemas/_ (47).md
+++ b/markdown-lab/poemas/_ (47).md
@@ -1,35 +1,19 @@
 ---
-slug: "/poemas/volar"
-title: "volar"
+slug: "/poemas/marte-y-venus"
+title: "marte-y-venus"
 ---
-Volar, implica rezagar la superficie.
+Marte y Venus
 
-&nbsp;
+sí son lunas del Sol,
 
-Aquel que sube
+con más parecidos 
 
-se despide de su asiento.
+que diferencias,
 
-&nbsp;
+uno es rojo 
 
-El que se lanza a morir,
+y el otro cae en cuenta
 
-es dueño del solado
+que los colores 
 
-que aborrece.
-
-&nbsp;
-
-Pero se tiene la fuerza,
-
-sin sueño, fiereza de tanto
-
-amar los propios sueños
-
-que se emprende el vuelo;
-
-el gestor de los deseos;
-
-satisfacer al suelo
-
-o a lo desconocido.
+son apariencias.
