--- a/markdown-lab/poemas/_ (48).md
+++ b/markdown-lab/poemas/_ (48).md
@@ -1,9 +1,27 @@
 ---
-slug: "/poemas/amistades-opacas"
-title: "amistades-opacas"
+slug: "/poemas/entre-calaveras"
+title: "entre-calaveras"
 ---
-Amistades opacas
+Entre calaveras,
 
-sentadas entre mentiras,
+tu cara iluminada.
 
-no brillan escarcha.
+&nbsp;
+
+Por resaltar tu brillo,
+
+te pintaste con ácido
+
+para lucir tu piel enrojecida.
+
+&nbsp;
+
+Nerviosa, manchaste
+
+tu rostro esmirriado.
+
+&nbsp;
+
+La nueva catrina,
+
+tropieza enceguecida.
