--- a/markdown-lab/poemas/_ (49).md
+++ b/markdown-lab/poemas/_ (49).md
@@ -1,9 +1,23 @@
 ---
-slug: "/poemas/manualmente"
-title: "manualmente"
+slug: "/poemas/somos-inocentes-pero-culpables"
+title: "somos-inocentes-pero-culpables"
 ---
-Manualmente,
+Somos inocentes pero culpables
 
-guardo tus memorias
+de la inocencia ante los tuertos.
 
-entre mi hipocampo.
+&nbsp;
+
+Su labrys justicia será blandida
+
+para dejarnos tuertos y a ellos ciegos,
+
+mientras les estrangula el peso
+
+de la sangre de sus heridas.
+
+&nbsp;
+
+Así, nosotros tomamos su labrys
+
+con la percepción disminuida.
