--- a/markdown-lab/poemas/_ (5).md
+++ b/markdown-lab/poemas/_ (5).md
@@ -1,15 +1,13 @@
 ---
-slug: "/poemas/quiero-y-pienso"
-title: "quiero-y-pienso"
+slug: "/poemas/me-besan-dos-versiones-de-ti"
+title: "me-besan-dos-versiones-de-ti"
 ---
-Quiero y pienso;
+Me besan dos versiones de ti:
 
-ambiciono y pienso;
+una, con saliva,
 
-deseo y pienso;
+trazando su néctar,
 
-planeo entre el mundo
+la otra, con ácido,
 
-de los supuestos;
-
-asesto entre la incertidumbre.
+creando ríos carmín.
