--- a/markdown-lab/poemas/_ (8).md
+++ b/markdown-lab/poemas/_ (8).md
@@ -1,9 +1,11 @@
 ---
-slug: "/poemas/emerge-una-conciencia"
-title: "emerge-una-conciencia"
+slug: "/poemas/entre-personas-azules-y-rojas"
+title: "entre-personas-azules-y-rojas"
 ---
-Emerge una conciencia
+Entre personas azules y rojas,
 
-que racionaliza contradicciones;
+me siento morada,
 
-querer o querer no quererte.
+pero también,
+
+me siento en casa.
