--- a/markdown-lab/poemas/_ (9).md
+++ b/markdown-lab/poemas/_ (9).md
@@ -1,17 +1,7 @@
 ---
-slug: "/poemas/trato-de-concentrarme"
-title: "trato-de-concentrarme"
+slug: "/poemas/hay-arcoiris"
+title: "hay-arcoíris"
 ---
-Trato de concentrarme,
+Hay arcoíris 
 
-en serio, pero tu espalda
-
-se filtra en mi memoria,
-
-qué irrisorio recuerdo.
-
-&nbsp;
-
-Acariciándote en las fronteras
-
-y en la suma de nuestro morbo.
+y acromatopsia.
