--- a/markdown-lab/poemas/_ (1).md
+++ b/markdown-lab/poemas/_ (1).md
@@ -1,7 +1,19 @@
 ---
-slug: "/poemas/el-arte-es-pavoneo"
-title: "el-arte-es-pavoneo"
+slug: "/poemas/me-calmo"
+title: "me-calmo"
 ---
-El arte es pavoneo 
+Me calmo, sin que noten los relámpagos.
 
-e/o hipnósis.
+&nbsp;
+
+Sonrío, sin que noten mi felicidad;
+
+resisto, sin que noten mi durabilidad.
+
+&nbsp;
+
+Noten, que mis acciones
+
+no responden a mis emociones,
+
+sino, a mi voluntad.
