--- a/markdown-lab/poemas/_ (22).md
+++ b/markdown-lab/poemas/_ (22).md
@@ -1,19 +1,93 @@
 ---
-slug: "/poemas/si-trato-de-levitar"
-title: "si-trato-de-levitar"
+slug: "/poemas/gracias-por-las-oraciones"
+title: "gracias-por-las-oraciones"
 ---
-Si trato de levitar
+Gracias por las oraciones
 
-un objeto hasta mis pies,
+que me envuelves.
 
-me desconcentro,
+&nbsp;
 
-me desanimo
+Hay susurros
 
-y tomo con mis manos
+que discuten mi carácter.
 
-sentimientos de involucionado,
+&nbsp;
 
-que cree que la fuerza 
+Entre el silencio de la tarde
 
-está consigo.
+me estorban atronando guerra.
+
+&nbsp;
+
+Acostado, no espero levantarme
+
+con grietas en mis pensamientos.
+
+&nbsp;
+
+Repetidamente, sentí 
+
+esta orquesta de sinapsis 
+
+atropellándome.
+
+&nbsp;
+
+En retrospectiva,
+
+un soñador con convulsiones.
+
+&nbsp;
+
+Voluntad dormida
+
+cordura con alucinaciones,
+
+impulsos animales
+
+de un sobreviviente
+
+que resiste urgencias
+
+de demolerse los huesos.
+
+&nbsp;
+
+Madre, mi familia te llama
+
+para que invoques de los Cielos
+
+ángeles guerreros,
+
+porque dicen que al niño
+
+se le metió el infierno,
+
+al final, era un transición,
+
+cambiando la investidura bestial,
+
+repleta de estocadas secretas,
+
+ahora se lamina con piel tan resistente
+
+como el vacío mismo,
+
+ahuyentando a los santos
+
+y su hipócrita cordura popular.
+
+&nbsp;
+
+Me despido de ti, de mi
+
+y del sentido común,
+
+para ver nítidamente la naturaleza
+
+con lentes de tranquilidad,
+
+fotografiando las bellas interacciones
+
+que el mundo representa.
