--- a/markdown-lab/poemas/_ (6).md
+++ b/markdown-lab/poemas/_ (6).md
@@ -1,13 +1,31 @@
 ---
-slug: "/poemas/la-soledad-mata"
-title: "la-soledad-mata"
+slug: "/poemas/ver-tus-lentes"
+title: "ver-tus-lentes"
 ---
-La soledad mata
-
-y a mí esta me masturba.
+Ver tus lentes.
 
 &nbsp;
 
-Me profesionalizo
+Delgados puentes de aluminio,
 
-en acompañarme.
+redonda red de cristal,
+
+tersa piel en la que se ha de posar
+
+el frío reflejo 
+
+de paneles de sal.
+
+&nbsp;
+
+En vaivén, a través 
+
+del arco de dorado floral
+
+sobre grandes cuencas,
+
+capturadoras negro abisal
+
+captan mi asomo 
+
+al ánima que avisto.
